[tool.poetry]
name = "marketplace_api"
version = "1.0"
description = "Simple Marketplace API"
authors = ["Анна Симанова <ani.simanova@yandex.ru>"]
readme = "README.md"
packages = [{include = "*", from = "app"}, {include = "**/*.py", from = "."}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pre-commit = "^3.0.4"
databases = {extras = ["postgresql"], version = "^0.7.0"}
asyncpg = "^0.27.0"
sqlalchemy = "1.4.46"
alembic = "^1.9.4"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.4.0"}
fastapi-pagination = "^0.11.4"
pytest = "^7.2.2"
httpx = "^0.23.3"
psycopg2 = "^2.9.5"
pytest-asyncio = "^0.20.3"
anyio = "^3.6.2"
trio = "^0.22.0"
aiosqlite = "^0.18.0"
coverage = "^7.2.1"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.10.3"
flake8 = "^6.0.0"
pytest-asyncio = "^0.20.3"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "uvicorn app.main:app --reload"
